# oea-backend

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  walkthrough.md
src/: main.py
src/question_generation/: init.py
src/question_generation/application/dto/: generate_question_request.py  generate_question_response.py  ingest_request.py  ingest_response.py  validation_response.py
src/question_generation/application/interfaces/: llm_provider.py  vector_store.py
src/question_generation/application/orchestrator/: generate_questions_orchestrator.py  ingest_textbook_orchestrator.py
src/question_generation/application/services/: embedding_service.py  gemini_llm_provider.py  ingestion_service.py  question_generation_service.py  question_parser_service.py  question_storage_service.py  question_validation_service.py
src/question_generation/domain/: chapter.py  chunk.py  concept.py  question.py  textbook.py  textbook_parsed_page.py
src/question_generation/ingestion_parser/: pdf_parser_service.py
src/question_generation/presentation/: routes.py
src/question_generation/question_validation/: bloom_validator.py  difficulty_validator.py  duplicate_validator.py  explanation_validator.py  option_validator.py  validator_result.py
src/question_generation/repository/: database_models.py  pg_vector_store.py  question_repository.py  textbook_repository.py
src/shared/: database.py
src/shared/enums/: __init__.py  blooms_level.py  difficulty_level.py  question_status.py  question_type.py
